Added styling and functionality

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <h1>React Markdown Previewer</h1>
-    <textarea id="editor"></textarea>
+    <div id="test-wrapper">
+      <div id="test1"></div>
+      <textarea id="test2"></textarea>
+    </div>
+    <h1>Markdown Previewer</h1>
+    <div id="editor-wrapper">
+      <div id="editor-bar">Editor</div>
+      <textarea id="editor"></textarea>
+    </div>
     <div id="preview"></div>
     <script type="text/javascript" src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.js"></script>
