--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <div id="test-wrapper">
-      <div id="test1"></div>
-      <textarea id="test2"></textarea>
-    </div>
     <h1>Markdown Previewer</h1>
     <div id="editor-wrapper">
-      <div id="editor-bar">Editor</div>
+      <div id="editor-bar">Editor<div id="editor-resize"></div></div>
       <textarea id="editor"></textarea>
     </div>
-    <div id="preview"></div>
+    <div id="previewer-wrapper">
+      <div id="previewer-bar">Previewer<div id="previewer-resize"></div></div>
+      <div id="previewer"></div>
+    </div>
     <script type="text/javascript" src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.js"></script>
   </body>
